# FamVoice

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  README.md  entities.json  eslint.config.js  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/releases/: v0.3.10.md  v0.3.11.md  v0.3.12.md  v0.3.13.md  v0.3.14.md  v0.3.15.md  v0.3.16.md  v0.3.17.md  v0.3.18.md  v0.3.19.md  v0.3.20.md  v0.3.21.md  v0.3.22.md  v0.3.23.md  v0.3.24.md  v0.3.25.md  v0.3.26.md  v0.3.27.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.3.9.md
docs/superpowers/plans/: 2026-03-17-widget-improvements.md  2026-03-18-fast-release-transcription.md  2026-03-18-persistent-mic-stream.md  2026-03-18-quiet-mic-capture.md  2026-03-19-drag-start-smoothing.md  2026-03-19-prompt-optimization.md  2026-03-19-prompt-optimizer-coding-agent.md  2026-03-19-prompt-optimizer-rework.md  2026-03-19-single-shot-fast-path.md  2026-03-21-auto-updater.md  2026-03-23-manual-update-flow.md
docs/superpowers/specs/: 2026-03-18-fast-release-transcription-design.md  2026-03-18-persistent-mic-stream-design.md  2026-03-18-quiet-mic-capture-design.md  2026-03-19-drag-start-smoothing-design.md  2026-03-19-prompt-optimization-design.md  (+6 more)
rdev_debug_ws/: Cargo.toml
rdev_debug_ws/src/: main.rs
src/: App.css  App.tsx  FamVoiceLogo.tsx  MainView.tsx  SettingsView.tsx  WidgetView.tsx  appConstants.ts  appHelpers.ts  appTypes.ts  autostartBehavior.test.mjs  brandDesignAlignment.test.mjs  ciWorkflow.test.mjs  main.tsx  promptOptimizerModels.test.mjs  releaseWorkflow.test.mjs  signalConsoleUi.test.mjs  systemBrandIcons.test.mjs  updateFlow.test.mjs  versionMetadata.test.mjs  widgetBehavior.test.mjs  widgetSizing.d.ts  widgetSizing.js  widgetSizing.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  default.test.mjs  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  clipboard.rs  dpapi.rs  glossary.rs  history.rs  injection.rs  input_hook.rs  lib.rs  main.rs  mic_analysis.rs  prompt_optimizer.rs  settings.rs  startup.rs  transcription.rs  window.rs
src-tauri/src/audio/: noise.rs
src-tauri/src/prompt_optimizer/: anthropic.rs  metaprompt.rs  mod.rs  openai.rs
src/components/: FamVoiceLockup.tsx  Select.tsx  VoiceWave.tsx
(+1 files in other folders)
