[package]
name = "famvoice"
version = "0.3.1"
description = "FamVoice Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "famvoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
cpal = "0.17"
keyring = "3"

flacenc = { version = "0.5", default-features = false }
enigo = "0.6.1"
arboard = "3.4"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rdev = { version = "0.5", features = ["unstable_grab"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.27.0"
