[package]
name = "famvoice"
version = "0.3.23"
description = "FamVoice Desktop App"
authors = ["Faminto"]
edition = "2021"

[lib]
name = "famvoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
cpal = "0.17"
keyring = { version = "3", features = ["windows-native"] }

flacenc = { version = "0.5", default-features = false }
nnnoiseless = { version = "0.5.2", default-features = false }
enigo = "0.6.1"
arboard = "3.4"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rdev = { version = "0.5", features = ["unstable_grab"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.27.0"
